projet_gl/src/test/deca/syntax/invalid/unaryExpr/incorrectUnaryMinus.deca
// Description:
//    invalid test parser for UnaryMinus.
//
// Resultats:
//    ligne 12 : mismatched input '=' expecting {'=', ',', ';'}
//
// Historique:
//    cree le 12/01/2024

{
    int a;
     = -1;
}